<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bucharest">


        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/attractions"
            style="@style/buton"
            android:text="@string/attractions">

        </Button>


        <Button
            android:id="@+id/transport"
            style="@style/buton"
            android:layout_marginTop="20dp"
            android:text="@string/transportation">

        </Button>

        <Button
            android:id="@+id/foods"
            style="@style/buton"
            android:layout_marginTop="20dp"
            android:text="@string/food_and_drink">

        </Button>

        <Button
            android:id="@+id/megafun"
            style="@style/buton"
            android:layout_marginTop="20dp"
            android:text="@string/entertainment">

        </Button>


    </LinearLayout>


</RelativeLayout>

